@@ -219,3 +219,4 @@ Please see Install/2.4 release notes *before* attempting to upgrade to version 2
 - Added support for custom user models
 - Added PageTypes
 - Added CMS_MAX_PAGE_HISTORY_REVERSIONS and changed default of CMS_MAX_PAGE_PUBLISH_REVERSIONS
+- Added option to {% static_placeholder %} to render only on the current site.
